# dtclassifier

./: CMakeLists.txt  README  README.md  about.ui  aboutdialog.cpp  aboutdialog.h  classifier.cpp  classifier.h  classifier.qrc  classifierdialog.cpp  classifierdialog.h  classifierdialogbase.ui  classifiergui.cpp  classifiergui.h  classifierguibase.ui  classifierutils.cpp  classifierworker.cpp  classifierworker.h  layerselectordialog.cpp  layerselectordialog.h  layerselectordialogbase.ui  main.cpp  main_application.cpp  main_application.h
CMakeModules/: FindOpenCV.cmake
